grammar.js
    source_file: $ => repeat($._definition),

    _definition: $ => choice(
      $.header,
      $.code_file,
      // Bare expressions/literals for testing (will be refined later)
      $._expression,
    ),

    // ─── Top-level Structures ───────────────────────────────────

    header: $ => seq(
      "header",
      field("name", $.identifier),
      optional($.uses_clause),
      repeat($._header_declaration),
      "endHeader",
    ),

    code_file: $ => seq(
      "code",
      field("name", $.identifier),
      repeat($._code_declaration),
      "endCode",
    ),

    _header_declaration: $ => choice(
      $.const_declaration,
      $.enum_declaration,
      $.type_declaration,
      $.error_declaration,
      $.var_declaration,
      $.functions_section,
      $.interface_declaration,
      $.class_declaration,
    ),

    _code_declaration: $ => choice(
      $.const_declaration,
      $.enum_declaration,
      $.type_declaration,
      $.error_declaration,
      $.var_declaration,
      $.function_declaration,
      $.interface_declaration,
      $.class_declaration,
      $.behavior_declaration,
    ),

    // ─── Uses Clause ────────────────────────────────────────────

    uses_clause: $ => seq(
      "uses",
      $.identifier,
      repeat($.renaming),
      repeat(seq(",", $.identifier, repeat($.renaming))),
    ),

    renaming: $ => seq(
      "renaming",
      field("from", $.identifier),
      "to",
      field("to", $.identifier),
    ),

    // ─── Declarations ───────────────────────────────────────────

    const_declaration: $ => seq(
      "const",
      repeat1($.const_declarator),
    ),

    const_declarator: $ => seq(
      field("name", $.identifier),
      "=",
      field("value", $._expression),
    ),

    enum_declaration: $ => seq(
      "enum",
      $.enum_value,
      repeat(seq(",", $.enum_value)),
    ),

    enum_value: $ => seq(
      field("name", $.identifier),
      optional(seq("=", field("value", $._expression))),
    ),

    type_declaration: $ => seq(
      "type",
      repeat1($.type_declarator),
    ),

    type_declarator: $ => seq(
      field("name", $.identifier),
      "=",
      field("type", $._type),
    ),

    error_declaration: $ => seq(
      "errors",
      repeat1($.error_declarator),
    ),

    error_declarator: $ => seq(
      field("name", $.identifier),
      $.parameter_list,
    ),

    var_declaration: $ => seq(
      "var",
      $.var_declarator,
      repeat(seq($._var_declarator_start, $.var_declarator)),
    ),

    var_declarator: $ => seq(
      repeat(seq(field("name", $.identifier), ",")),
      field("name", $.identifier),
      ":",
      field("type", $._type),
      optional(seq("=", field("value", $._expression))),
    ),

    // ─── Types ──────────────────────────────────────────────────

    _type: $ => choice(
      $.primitive_type,
      $.pointer_type,
      $.array_type,
      $.record_type,
      $.function_type,
      $.named_type,
    ),

    primitive_type: _ => choice(
      "int", "bool", "char", "double", "void", "typeOfNull", "anyType",
    ),

    pointer_type: $ => seq(
      "ptr", "to",
      field("type", $._type),
    ),

    array_type: $ => seq(
      "array",
      optional(seq("[", commaSep1($.array_dimension), "]")),
      "of",
      field("type", $._type),
    ),

    named_type: $ => prec.right(seq(
      field("name", $.identifier),
      optional($.type_arguments),
    )),

    parameter_list: $ => seq(
      "(",
      optional(commaSep1($.parameter)),
      ")",
    ),

    parameter: $ => seq(
      repeat(seq(field("name", $.identifier), ",")),
      field("name", $.identifier),
      ":",
      field("type", $._type),
    ),

    // ─── Functions (stubs for Phase 3) ──────────────────────────

    function_declaration: $ => seq(
      "function",
      field("name", $.identifier),
      $.parameter_list,
      optional(seq("returns", field("return_type", $._type))),
      repeat($.var_declaration),
      repeat($._statement),
      "endFunction",
    ),

    // ─── OOP ─────────────────────────────────────────────────────

    _statement: $ => choice(
      $.if_statement,
      $.while_statement,
      $.do_until_statement,
      $.for_statement,
      $.switch_statement,
      $.try_statement,
      $.return_statement,
      $.break_statement,
      $.continue_statement,
      $.throw_statement,
      $.free_statement,
      $.debug_statement,
      $.assignment_statement,
      $.expression_statement,
    ),

    assignment_statement: $ => seq(
      field("left", $._expression),
      "=",
      field("right", $._expression),
    ),

    // ─── Expressions ────────────────────────────────────────────

    _expression: $ => choice(
      $._literal,
      $.identifier,
      $.parenthesized_expression,
      $.binary_expression,
      $.unary_expression,
      $.call_expression,
      $.field_access,
      $.method_call,
      $.array_access,
      $.as_ptr_to_expression,
      $.as_integer_expression,
      $.array_size_expression,
      $.is_instance_of_expression,
      $.is_kind_of_expression,
      $.size_of_expression,
      $.constructor_expression,
      $.closure_expression,
    ),

    parenthesized_expression: $ => seq("(", $._expression, ")"),

    binary_expression: $ => choice(
      // Logical OR (lowest binary precedence)
      prec.left(PREC.LOGICAL_OR, seq(field("left", $._expression), "||", field("right", $._expression))),
      // Logical AND
      prec.left(PREC.LOGICAL_AND, seq(field("left", $._expression), "&&", field("right", $._expression))),
      // Bitwise OR
      prec.left(PREC.BITWISE_OR, seq(field("left", $._expression), "|", field("right", $._expression))),
      // Bitwise XOR
      prec.left(PREC.BITWISE_XOR, seq(field("left", $._expression), "^", field("right", $._expression))),
      // Bitwise AND
      prec.left(PREC.BITWISE_AND, seq(field("left", $._expression), "&", field("right", $._expression))),
      // Equality
      prec.left(PREC.EQUALITY, seq(field("left", $._expression), "==", field("right", $._expression))),
      prec.left(PREC.EQUALITY, seq(field("left", $._expression), "!=", field("right", $._expression))),
      // Relational
      prec.left(PREC.RELATIONAL, seq(field("left", $._expression), "<", field("right", $._expression))),
      prec.left(PREC.RELATIONAL, seq(field("left", $._expression), "<=", field("right", $._expression))),
      prec.left(PREC.RELATIONAL, seq(field("left", $._expression), ">", field("right", $._expression))),
      prec.left(PREC.RELATIONAL, seq(field("left", $._expression), ">=", field("right", $._expression))),
      // Shift
      prec.left(PREC.SHIFT, seq(field("left", $._expression), "<<", field("right", $._expression))),
      prec.left(PREC.SHIFT, seq(field("left", $._expression), ">>", field("right", $._expression))),
      prec.left(PREC.SHIFT, seq(field("left", $._expression), ">>>", field("right", $._expression))),
      // Additive
      prec.left(PREC.ADDITIVE, seq(field("left", $._expression), "+", field("right", $._expression))),
      prec.left(PREC.ADDITIVE, seq(field("left", $._expression), "-", field("right", $._expression))),
      // Multiplicative
      prec.left(PREC.MULTIPLICATIVE, seq(field("left", $._expression), "*", field("right", $._expression))),
      prec.left(PREC.MULTIPLICATIVE, seq(field("left", $._expression), "/", field("right", $._expression))),
      prec.left(PREC.MULTIPLICATIVE, seq(field("left", $._expression), "%", field("right", $._expression))),
    ),

    unary_expression: $ => prec.right(PREC.UNARY, seq(
      field("operator", choice("!", "-", "*", "&")),
      field("operand", $._expression),
    )),

    call_expression: $ => prec(PREC.CALL, seq(
      field("function", $.identifier),
      $.argument_list,
    )),

    field_access: $ => prec.left(PREC.POSTFIX, seq(
      field("object", $._expression),
      ".",
      field("field", $.identifier),
    )),

    method_call: $ => prec.left(PREC.POSTFIX + 1, seq(
      field("object", $._expression),
      ".",
      field("method", $.identifier),
      $.argument_list,
    )),

    array_access: $ => prec.left(PREC.POSTFIX, seq(
      field("array", $._expression),
      "[",
      field("index", $._expression),
      "]",
    )),

    // Postfix type operators
    as_ptr_to_expression: $ => prec.left(PREC.POSTFIX, seq(
      $._expression,
      "asPtrTo",
      field("type", $._type),
    )),

    as_integer_expression: $ => prec.left(PREC.POSTFIX, seq(
      $._expression,
      "asInteger",
    )),

    array_size_expression: $ => prec.left(PREC.POSTFIX, seq(
      $._expression,
      "arraySize",
    )),

    is_instance_of_expression: $ => prec.left(PREC.POSTFIX, seq(
      $._expression,
      "isInstanceOf",
      field("type", $._type),
    )),

    is_kind_of_expression: $ => prec.left(PREC.POSTFIX, seq(
      $._expression,
      "isKindOf",
      field("type", $._type),
    )),

    size_of_expression: $ => seq(
      "sizeOf",
      field("type", $._type),
    ),

    constructor_expression: $ => prec.right(seq(
      choice("new", "alloc"),
      field("type", $._type),
      optional(choice(
        $.field_initializer_list,
        $.array_initializer_list,
      )),
    )),

    field_initializer_list: $ => seq(
      "{",
      commaSep1($.field_initializer),
      "}",
    ),

    field_initializer: $ => seq(
      field("name", $.identifier),
      "=",
      field("value", $._expression),
    ),

    argument_list: $ => seq(
      "(",
      optional(commaSep1($._expression)),
      ")",
    ),

    integer_literal: _ => /[0-9]+/,

    identifier: _ => /[a-zA-Z_][a-zA-Z0-9_]*/,
  },
});

// ─── Helpers ──────────────────────────────────────────────────────

/**
 * Comma-separated list with at least one element.
 * @param {RuleOrLiteral} rule
 */
function commaSep1(rule) {
  return seq(rule, repeat(seq(",", rule)));
}
